--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>KalaKart - Handmade Festival Décor Marketplace</title>
+    <meta name="description" content="Connect with local artisans for authentic handcrafted torans, rangoli, and festival decorations. From home artists to your home." />
+    <meta name="author" content="KalaKart" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎨</text></svg>" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="KalaKart - Handmade Festival Décor Marketplace" />
+    <meta property="og:description" content="Connect with local artisans for authentic handcrafted torans, rangoli, and festival decorations." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1605810230434-7631ac76ec81?w=1200&h=630&fit=crop" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@KalaKart" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1605810230434-7631ac76ec81?w=1200&h=630&fit=crop" />
   </head>
 
   <body>
